feat: initiate trading service
